<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2019, Jason Cavinder <jason.cavinder@gmail.com>.
  ~ This project is licenced to the client of Upwork contract #21949291. It is not
  ~ licensed for public use. See the LICENSE.md file for details
  -->

<!DOCTYPE resources [<!ENTITY appname "Insulin Pen (demo)"><!ENTITY author "Jason Cavinder"><!ENTITY authorEmail "jason.cavinder@gmail.com"><!ENTITY authorPhone "+1-808-989-1186">]>
<resources>
    <string name="app_name">&appname;</string>

    <string name="app_icon">&appname; App Icon</string>
    <string name="launch_screen_text">Simplify your \ndiabetes \ncare plan</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>

    <string name="title_activity_main">At a glance</string>
    <string name="title_login_activity">Sign In</string>

    <string name="email">email</string>
    <string name="password">password</string>

    <string name="create_account">Create an Account</string>
    <string name="title_activity_main2">App Demo</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_email">Not a valid email address</string>
    <string name="invalid_password">Password must be at least characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="currency">$%.2f</string>
    <string name="barcode_setup_error">Could not setup barcode detector!</string>
    <string name="found_pen">Found insulin pen.\nID# %s</string>
    <string name="continue_btn">Continue</string>
    <string name="profile">Profile</string>
    <string name="dose_history">Dose History</string>
    <string name="invalid_first_name">Please enter your first name</string>
    <string name="invalid_last_name">Please enter your last name</string>
    <string name="invalid_confirm">Confirm password doesn\'t match password</string>
    <string name="create_user_failed">Failed to create user account</string>
    <string name="connect_your_pen">Connect Your Pen</string>
    <string name="error_adding_pen">Error adding pen: %s</string>
    <string name="provider_photo_desc">Photo of this Provider</string>
    <string name="label_education">Education:</string>
    <string name="label_copay">Copay:</string>
    <string name="label_languages">Languages:</string>
    <string name="add_provider_title">Connect With Your Doctor</string>
    <string name="button_later">I\'ll do this later…</string>
    <string name="button_searching_provider">Searching for provider</string>
    <string name="profile_summary_demo_text">Welcome %s! With type 2 diabetes, the body either doesn\'t produce enough insulin, or it resists insulin. Treatments include diet, exercise, medication and insulin therapy.</string>
    <string name="pen_data_transfer_indicator">Pen data transfer indicator</string>
    <string name="pen_connection_status_indicator">Pen connection status indicator</string>
    <string name="pen_battery_status_indicator">Pen battery status indicator</string>
    <string name="from">From:</string>
    <string name="got_it">Okay</string>
    <string name="no_unread_messages">There are no unread messages</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="blank_password_okay">(blank = do not change)</string>
    <string name="confirm">Confirm</string>
    <string name="must_match_password">(must match password)</string>
    <string name="cancel_changes">Cancel Changes</string>
    <string name="save_payment_method">Save Payment Method</string>
    <string name="label_email">Email:</string>
    <string name="name">Name</string>
    <string name="paypal_logo">PayPal logo</string>
    <string name="amazon_pay_logo">Amazon Pay logo</string>
    <string name="mastercard_logo">Mastercard logo</string>
    <string name="visa_logo">Visa logo</string>
    <string name="choose_a_payment_method_above">Choose a payment method above</string>
    <string name="card_number">Card Number:</string>
    <string name="expiration">Expiration:</string>
    <string name="mmyy">MMYY</string>
    <string name="name_on_card">Name on Card:</string>
    <string name="error_ccexp">Invalid Expiration Date</string>
    <string name="error_ccnum">Invalid Card Number</string>
    <string name="error_ccname">Please enter your name as it appears on this card</string>
    <string name="error_payment_email">Please enter the email address for this service</string>
    <string name="report_summary">Report Summary</string>
    <string name="toggle_short_long_report">Toggle short/long report</string>
    <string name="reports_icon">Reports Icon</string>
    <string name="_88_mg_dl">88 mg/dL</string>
    <string name="glucose_meter">glucose meter</string>
    <string name="last_glucose">Last Glucose</string>
    <string name="injection_meter">injection meter</string>
    <string name="_7u">7U</string>
    <string name="last_dose">Last Dose</string>
    <string name="_06_15">06:15</string>
    <string name="sleep_meter">sleep meter</string>
    <string name="time_asleep">Time Asleep</string>
    <string name="today_s_glucose">Today\'s Glucose</string>
    <string name="feedback_from_dr_lauren_ngood_work_please_keep_up_the_injection">Feedback from Dr. Lauren:  Good Work! Please keep up the injection!</string>
    <string name="average_injection">Average Injection</string>
    <string name="feedback_nplease_don_t_forget_you_need_one_more_injection_tonight">Feedback: Please Don\'t forget you need one more injection tonight!</string>
    <string name="average_sleep">Average Sleep</string>
    <string name="feedback_from_dr_lauren_nyou_need_more_sleep_to_control_your_glucose_please_sleep_8_hours_if_you_can">Feedback from Dr. Lauren: You need more sleep to control your glucose! Please sleep 8 hours if you can!</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="email_">Email: </string>
    <string name="location">Location</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="insulin_pin_image">Insulin Pin Image</string>
    <!--<string name="calculate_amp_schedule"><![CDATA[Calculate & Schedule]]></string>-->
    <!--<string name="next_scheduled_dose">Next Scheduled Dose</string>-->
    <string name="next_basal_dose">Next Basal Dose:</string>
    <string name="schedule_basal_doses">Schedule Basal Doses</string>
    <string name="change">Change</string>
    <string name="bolus_meal_dose">Bolus (Meal) Dose:</string>
    <string name="calculate_and_inject">Calculate &amp; Inject </string>
    <string name="pen_not_connected">Pen is not connected</string>
    <string name="please_enter_a_time">Please enter a time:</string>
    <string name="ex_7_00">ex: 7:00</string>
    <string name="guidance_basal">Based on your personal data, our AI, and %s\'s recommendations, your basal injections should be %dU every morning. What time each morning would you like to schedule these doses?</string>
    <string name="guidance_bolus">Your bolus doses should be 30 minutes before lunch and dinner and are based on your personal data, our AI, %s\'s recommendations, your blood sugar, and the amount of carbs in each meal.\nYour blood sugar has already been transferred from your pen. How many carbs do you expect in this meal?</string>
    <string name="blood_sugar">Blood Sugar (mg/dL):</string>
    <string name="carbs_in_this_meal_grams">Carbs in this meal (grams):</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="payment">Payment</string>
    <string name="messages">Messages</string>

    <string-array name="hours">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="minutes">
        <item>00</item>
        <item>15</item>
        <item>30</item>
        <item>45</item>
    </string-array>
    <string-array name="am_pm">
        <item>AM</item>
        <item>PM</item>
    </string-array>
</resources>
