<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.WelcomeFragment">
    <!--android:background="?attr/colorAccent"-->


    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:contentDescription="@string/app_icon"
        app:layout_constraintBottom_toTopOf="@+id/text_lead"
        app:layout_constraintStart_toStartOf="@+id/button_signup"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/text_lead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:elevation="2dp"
        android:paddingBottom="12dp"
        android:text="@string/launch_screen_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_signup"
        app:layout_constraintStart_toStartOf="@+id/button_signup"
        app:layout_constraintTop_toBottomOf="@+id/image_logo" />

    <Button
        android:id="@+id/button_signup"
        style="@style/Widget.AppCompat.Button.Colored.Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_signin"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_lead" />

    <Button
        android:id="@+id/button_signin"
        style="@style/Widget.AppCompat.Button.Colored.Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toBottomOf="@+id/button_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_signup"
        app:layout_constraintTop_toTopOf="@+id/button_signup" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_demo_actions_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_add_24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>

