<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                            xmlns:app="http://schemas.android.com/apk/res-auto"
                                            xmlns:tools="http://schemas.android.com/tools"
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            tools:context=".LoginMainFragment" android:id="@+id/fragmentLayout">
    <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp" android:id="@+id/image_logo"
            android:contentDescription="@string/app_icon" android:visibility="visible"
            android:src="@drawable/ic_launcher"
            app:layout_constraintStart_toStartOf="@+id/button_signup"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toTopOf="@+id/text_lead"
            app:layout_constraintVertical_chainStyle="packed"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/text_lead"
            android:textSize="42sp"
            android:textStyle="bold"
            android:lineSpacingExtra="-4sp"
            android:visibility="visible"
            android:text="@string/launch_screen_text"
            android:fontFamily="@font/anodina_extra_bold"
            android:paddingBottom="12dp"
            app:layout_constraintStart_toStartOf="@+id/button_signup"
            app:layout_constraintTop_toBottomOf="@+id/image_logo"
            app:layout_constraintBottom_toTopOf="@+id/button_signup"/>
    <Button
            android:text="@string/sign_up"
            android:layout_width="wrap_content"
            android:id="@+id/button_signup"
            android:textStyle="bold" android:textSize="18sp"
            android:textAllCaps="false" android:layout_height="wrap_content"
            android:enabled="true"
            style="@style/Widget.AppCompat.Button.Colored"
            android:paddingTop="16dp"
            android:paddingBottom="16dp" android:paddingLeft="32dp" android:paddingRight="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/button_signin_finger"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintTop_toBottomOf="@+id/text_lead"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/sign_in"
            android:layout_width="wrap_content"
            android:id="@+id/button_signin_finger"
            android:textStyle="bold" android:textSize="18sp"
            android:textAllCaps="false" android:layout_height="wrap_content"
            android:enabled="true"
            style="@style/Widget.AppCompat.Button.Colored"
            android:paddingBottom="16dp"
            android:paddingLeft="32dp" android:paddingRight="32dp" android:paddingTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/button_signup" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button_signup"/>
</androidx.constraintlayout.widget.ConstraintLayout>