<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                            xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            tools:context=".LoginUserPassFragment" android:id="@+id/frameLayout">
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textWebEmailAddress"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/text_email"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/text_pass" android:hint="@string/email"
            android:paddingVertical="8dp" android:paddingHorizontal="16dp"
            android:singleLine="true" android:autofillHints="email "
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_chainStyle="packed"
            android:layout_margin="8dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/text_pass" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/text_email"
            app:layout_constraintBottom_toTopOf="@+id/button_cancel_pass" app:layout_constraintHorizontal_bias="0.5"
            android:hint="@string/password" android:autofillHints="password "
            android:layout_margin="8dp" android:selectAllOnFocus="true" android:singleLine="true"/>
    <Button
            android:text="@android:string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_cancel_pass"
            style="@style/Widget.AppCompat.Button" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/button_signin_pass"
            app:layout_constraintHorizontal_chainStyle="spread_inside" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_pass"
            android:layout_margin="8dp"/>
    <Button
            android:text="@string/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_signin_pass"
            style="@style/Widget.AppCompat.Button.Colored"
            app:layout_constraintStart_toEndOf="@+id/button_cancel_pass"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button_cancel_pass"
            app:layout_constraintBottom_toBottomOf="@+id/button_cancel_pass"
            android:layout_margin="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>